vezba09/while/micko.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    6 parameter: %empty
    7          | _TYPE _ID

    8 $@2: %empty

    9 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   10 variable_list: %empty
   11              | variable_list variable

   12 variable: _TYPE _ID _SEMICOLON

   13 statement_list: %empty
   14               | statement_list statement

   15 statement: compound_statement
   16          | assignment_statement
   17          | if_statement
   18          | return_statement
   19          | for_stmt
   20          | while_statement

   21 @3: %empty

   22 $@4: %empty

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list _ID _INC _SEMICOLON _RBRACKET

   24 @5: %empty

   25 @6: %empty

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

   27 compound_statement: _LBRACKET statement_list _RBRACKET

   28 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   29 num_exp: exp
   30        | num_exp _AROP exp

   31 exp: literal
   32    | _ID
   33    | function_call
   34    | _LPAREN num_exp _RPAREN

   35 literal: _INT_NUMBER
   36        | _UINT_NUMBER

   37 $@7: %empty

   38 function_call: _ID $@7 _LPAREN argument _RPAREN

   39 argument: %empty
   40         | num_exp

   41 if_statement: if_part
   42             | if_part _ELSE statement

   43 @8: %empty

   44 $@9: %empty

   45 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN statement

   46 rel_exp: num_exp _RELOP num_exp

   47 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _TYPE <i> (258) 5 7 12
    _IF (259) 45
    _ELSE (260) 42
    _RETURN (261) 47
    _ID <s> (262) 5 7 12 23 26 28 32 38
    _INT_NUMBER <s> (263) 35
    _UINT_NUMBER <s> (264) 36
    _LPAREN (265) 5 23 26 34 38 45
    _RPAREN (266) 5 23 26 34 38 45
    _LBRACKET (267) 9 23 27
    _RBRACKET (268) 9 23 27
    _ASSIGN (269) 26 28
    _FOR (270) 26
    _WHILE (271) 23
    _INC (272) 23 26
    _SEMICOLON (273) 12 23 26 28 47
    _AROP <i> (274) 30
    _RELOP <i> (275) 46
    ONLY_IF (276)


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    program (23)
        on left: 1
        on right: 0
    function_list (24)
        on left: 2 3
        on right: 1 3
    function (25)
        on left: 5
        on right: 2 3
    $@1 (26)
        on left: 4
        on right: 5
    parameter (27)
        on left: 6 7
        on right: 5
    body (28)
        on left: 9
        on right: 5
    $@2 (29)
        on left: 8
        on right: 9
    variable_list (30)
        on left: 10 11
        on right: 9 11
    variable (31)
        on left: 12
        on right: 11
    statement_list (32)
        on left: 13 14
        on right: 9 14 23 27
    statement (33)
        on left: 15 16 17 18 19 20
        on right: 14 26 42 45
    while_statement (34)
        on left: 23
        on right: 20
    @3 (35)
        on left: 21
        on right: 23
    $@4 (36)
        on left: 22
        on right: 23
    for_stmt (37)
        on left: 26
        on right: 19
    @5 (38)
        on left: 24
        on right: 26
    @6 (39)
        on left: 25
        on right: 26
    compound_statement (40)
        on left: 27
        on right: 15
    assignment_statement (41)
        on left: 28
        on right: 16
    num_exp <i> (42)
        on left: 29 30
        on right: 28 30 34 40 46 47
    exp <i> (43)
        on left: 31 32 33 34
        on right: 29 30
    literal <i> (44)
        on left: 35 36
        on right: 26 31
    function_call <i> (45)
        on left: 38
        on right: 33
    $@7 (46)
        on left: 37
        on right: 38
    argument <i> (47)
        on left: 39 40
        on right: 38
    if_statement (48)
        on left: 41 42
        on right: 17
    if_part <i> (49)
        on left: 45
        on right: 41 42
    @8 (50)
        on left: 43
        on right: 45
    $@9 (51)
        on left: 44
        on right: 45
    rel_exp <i> (52)
        on left: 46
        on right: 23 26 45
    return_statement (53)
        on left: 47
        on right: 18


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


State 1

    5 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 9


State 9

    5 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter)

    parameter  go to state 11


State 10

    7 parameter: _TYPE . _ID

    _ID  shift, and go to state 12


State 11

    5 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 13


State 12

    7 parameter: _TYPE _ID .

    $default  reduce using rule 7 (parameter)


State 13

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 14

    body  go to state 15


State 14

    9 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 10 (variable_list)

    variable_list  go to state 16


State 15

    5 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 16

    9 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   11 variable_list: variable_list . variable

    _TYPE  shift, and go to state 17

    $default  reduce using rule 8 ($@2)

    $@2       go to state 18
    variable  go to state 19


State 17

   12 variable: _TYPE . _ID _SEMICOLON

    _ID  shift, and go to state 20


State 18

    9 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 21


State 19

   11 variable_list: variable_list variable .

    $default  reduce using rule 11 (variable_list)


State 20

   12 variable: _TYPE _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 22


State 21

    9 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   14 statement_list: statement_list . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 27
    _FOR       shift, and go to state 28
    _WHILE     shift, and go to state 29

    statement             go to state 30
    while_statement       go to state 31
    for_stmt              go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 22

   12 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 12 (variable)


State 23

   45 if_part: _IF . _LPAREN @8 rel_exp $@9 _RPAREN statement

    _LPAREN  shift, and go to state 38


State 24

   47 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 43
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 25

   28 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 47


State 26

   27 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 48


State 27

    9 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 9 (body)


State 28

   26 for_stmt: _FOR . _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

    _LPAREN  shift, and go to state 49


State 29

   23 while_statement: _WHILE . @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list _ID _INC _SEMICOLON _RBRACKET

    $default  reduce using rule 21 (@3)

    @3  go to state 50


State 30

   14 statement_list: statement_list statement .

    $default  reduce using rule 14 (statement_list)


State 31

   20 statement: while_statement .

    $default  reduce using rule 20 (statement)


State 32

   19 statement: for_stmt .

    $default  reduce using rule 19 (statement)


State 33

   15 statement: compound_statement .

    $default  reduce using rule 15 (statement)


State 34

   16 statement: assignment_statement .

    $default  reduce using rule 16 (statement)


State 35

   17 statement: if_statement .

    $default  reduce using rule 17 (statement)


State 36

   41 if_statement: if_part .
   42             | if_part . _ELSE statement

    _ELSE  shift, and go to state 51

    $default  reduce using rule 41 (if_statement)


State 37

   18 statement: return_statement .

    $default  reduce using rule 18 (statement)


State 38

   45 if_part: _IF _LPAREN . @8 rel_exp $@9 _RPAREN statement

    $default  reduce using rule 43 (@8)

    @8  go to state 52


State 39

   32 exp: _ID .
   38 function_call: _ID . $@7 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 37 ($@7)
    $default  reduce using rule 32 (exp)

    $@7  go to state 53


State 40

   35 literal: _INT_NUMBER .

    $default  reduce using rule 35 (literal)


State 41

   36 literal: _UINT_NUMBER .

    $default  reduce using rule 36 (literal)


State 42

   34 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 54
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 43

   30 num_exp: num_exp . _AROP exp
   47 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 55
    _AROP       shift, and go to state 56


State 44

   29 num_exp: exp .

    $default  reduce using rule 29 (num_exp)


State 45

   31 exp: literal .

    $default  reduce using rule 31 (exp)


State 46

   33 exp: function_call .

    $default  reduce using rule 33 (exp)


State 47

   28 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 57
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 48

   14 statement_list: statement_list . statement
   27 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _RBRACKET  shift, and go to state 58
    _FOR       shift, and go to state 28
    _WHILE     shift, and go to state 29

    statement             go to state 30
    while_statement       go to state 31
    for_stmt              go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 49

   26 for_stmt: _FOR _LPAREN . _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

    _ID  shift, and go to state 59


State 50

   23 while_statement: _WHILE @3 . _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list _ID _INC _SEMICOLON _RBRACKET

    _LPAREN  shift, and go to state 60


State 51

   42 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _FOR       shift, and go to state 28
    _WHILE     shift, and go to state 29

    statement             go to state 61
    while_statement       go to state 31
    for_stmt              go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 52

   45 if_part: _IF _LPAREN @8 . rel_exp $@9 _RPAREN statement

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 62
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    rel_exp        go to state 63


State 53

   38 function_call: _ID $@7 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 64


State 54

   30 num_exp: num_exp . _AROP exp
   34 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 65
    _AROP    shift, and go to state 56


State 55

   47 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 47 (return_statement)


State 56

   30 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    exp            go to state 66
    literal        go to state 45
    function_call  go to state 46


State 57

   28 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   30 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 67
    _AROP       shift, and go to state 56


State 58

   27 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 27 (compound_statement)


State 59

   26 for_stmt: _FOR _LPAREN _ID . _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

    _ASSIGN  shift, and go to state 68


State 60

   23 while_statement: _WHILE @3 _LPAREN . rel_exp _RPAREN _LBRACKET $@4 statement_list _ID _INC _SEMICOLON _RBRACKET

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 62
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    rel_exp        go to state 69


State 61

   42 if_statement: if_part _ELSE statement .

    $default  reduce using rule 42 (if_statement)


State 62

   30 num_exp: num_exp . _AROP exp
   46 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 56
    _RELOP  shift, and go to state 70


State 63

   45 if_part: _IF _LPAREN @8 rel_exp . $@9 _RPAREN statement

    $default  reduce using rule 44 ($@9)

    $@9  go to state 71


State 64

   38 function_call: _ID $@7 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    $default  reduce using rule 39 (argument)

    num_exp        go to state 72
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    argument       go to state 73


State 65

   34 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 34 (exp)


State 66

   30 num_exp: num_exp _AROP exp .

    $default  reduce using rule 30 (num_exp)


State 67

   28 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 28 (assignment_statement)


State 68

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN . literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41

    literal  go to state 74


State 69

   23 while_statement: _WHILE @3 _LPAREN rel_exp . _RPAREN _LBRACKET $@4 statement_list _ID _INC _SEMICOLON _RBRACKET

    _RPAREN  shift, and go to state 75


State 70

   46 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 76
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 71

   45 if_part: _IF _LPAREN @8 rel_exp $@9 . _RPAREN statement

    _RPAREN  shift, and go to state 77


State 72

   30 num_exp: num_exp . _AROP exp
   40 argument: num_exp .

    _AROP  shift, and go to state 56

    $default  reduce using rule 40 (argument)


State 73

   38 function_call: _ID $@7 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 78


State 74

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal . @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

    $default  reduce using rule 24 (@5)

    @5  go to state 79


State 75

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN . _LBRACKET $@4 statement_list _ID _INC _SEMICOLON _RBRACKET

    _LBRACKET  shift, and go to state 80


State 76

   30 num_exp: num_exp . _AROP exp
   46 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 56

    $default  reduce using rule 46 (rel_exp)


State 77

   45 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _FOR       shift, and go to state 28
    _WHILE     shift, and go to state 29

    statement             go to state 81
    while_statement       go to state 31
    for_stmt              go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 78

   38 function_call: _ID $@7 _LPAREN argument _RPAREN .

    $default  reduce using rule 38 (function_call)


State 79

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 . _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

    _SEMICOLON  shift, and go to state 82


State 80

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET . $@4 statement_list _ID _INC _SEMICOLON _RBRACKET

    $default  reduce using rule 22 ($@4)

    $@4  go to state 83


State 81

   45 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN statement .

    $default  reduce using rule 45 (if_part)


State 82

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON . rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 62
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    rel_exp        go to state 84


State 83

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 . statement_list _ID _INC _SEMICOLON _RBRACKET

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 85


State 84

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp . _SEMICOLON _ID @6 _INC _RPAREN statement

    _SEMICOLON  shift, and go to state 86


State 85

   14 statement_list: statement_list . statement
   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list . _ID _INC _SEMICOLON _RBRACKET

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 87
    _LBRACKET  shift, and go to state 26
    _FOR       shift, and go to state 28
    _WHILE     shift, and go to state 29

    statement             go to state 30
    while_statement       go to state 31
    for_stmt              go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 86

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON . _ID @6 _INC _RPAREN statement

    _ID  shift, and go to state 88


State 87

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list _ID . _INC _SEMICOLON _RBRACKET
   28 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 47
    _INC     shift, and go to state 89


State 88

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID . @6 _INC _RPAREN statement

    $default  reduce using rule 25 (@6)

    @6  go to state 90


State 89

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list _ID _INC . _SEMICOLON _RBRACKET

    _SEMICOLON  shift, and go to state 91


State 90

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 . _INC _RPAREN statement

    _INC  shift, and go to state 92


State 91

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list _ID _INC _SEMICOLON . _RBRACKET

    _RBRACKET  shift, and go to state 93


State 92

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC . _RPAREN statement

    _RPAREN  shift, and go to state 94


State 93

   23 while_statement: _WHILE @3 _LPAREN rel_exp _RPAREN _LBRACKET $@4 statement_list _ID _INC _SEMICOLON _RBRACKET .

    $default  reduce using rule 23 (while_statement)


State 94

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN . statement

    _IF        shift, and go to state 23
    _RETURN    shift, and go to state 24
    _ID        shift, and go to state 25
    _LBRACKET  shift, and go to state 26
    _FOR       shift, and go to state 28
    _WHILE     shift, and go to state 29

    statement             go to state 95
    while_statement       go to state 31
    for_stmt              go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 95

   26 for_stmt: _FOR _LPAREN _ID _ASSIGN literal @5 _SEMICOLON rel_exp _SEMICOLON _ID @6 _INC _RPAREN statement .

    $default  reduce using rule 26 (for_stmt)
